
5.2b1 -> 5.3a1
    - jbj: add --with-valgrind homeopathy to measure existing RPM
	insturmentation effects on performance.
    - jbj: don't reset to -O0 with --enable-build-debug and GCC.
    - proyvind: rpmsyck: clean up, use rpmioPool and add destructor.
    - proyvind: rpmhash: add htGetKeys() for retrieving the keys of the hash table.
    - jbj: bash: wire-up internal bash build with RPM AutoFu.
    - jbj: rc: toss the n00b embedding into the -lrpmmisc kitchen sink.
    - jbj: grep: fix: don't segfault if no usage mutex or pool attached.
    - proyvind: remove %distepoch from %provideversion as it will break
	compatibility with rpm <= 4.5.
    - proyvind: rpm4compat: add a wrapper function for headerFormat().
    - rse: align semantics of Lua function rpm.hostname() with the C API function buildHost()

=============================================================================

5.2a4 -> 5.2b1:
    [...]
    - proyvind: cpuinfo: move out cpuinfo feature dependencies to YAML.
    - proyvind: rpmsyck: first shot at YAML parser in pure C.
    - proyvind: get rid of parallel %___NVRDA macro, just merge it with %___NVRA in stead.
    - jbj: add RPMSENSE_RPMLIB to new tracking dependencies. at least its
	consistent even if useless.
    - jbj: fix: rpmdsMerge() shouldn't leave a result that seems to have
	active iteration in progress. There are side effects from macro
	expanding {N,EVR} that aren't correct.
    - proyvind: cpuinfo: change name of '%_prefer_buildarchs' macro to '%_prefer_target_cpu'.
    - proyvind: cpuinfo: change delimiter for %_prefer_buildarchs from ':' to ' '.
    - jbj: js: add AutoFu to build --with-js=internal.
    - jbj: ruby: fix: global interpreter with contained object refcnts needs
	early cleanup in rpmcliFini(), not in rpmioClean().
    - proyvind: cpuinfo: allow to enable from configure again since it's usable
	now. (although still room for improvements...)
    - jbj: ruby: stub-in the minimal necessary AutoFu to attempt ruby bindings.